30.05.24 5.5.1 learn Prepared Statements, change draftnote_v2.txt, ExecSQL.java, added QueryTest.java, ExecSQLV2.java